--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
 </head>
 <body>
+<!--  
 <div id="root"></div>
 <script type="text/babel" src="index.js"></script>
+ -->
+ <div id="root"></div>
+  <script type="text/babel" src="index.js">
+  </script>
 </body>
 </html>
 
